--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Full Stack Developer</title>
-    <meta name="description" content="Full Stack Developer specializing in MERN Stack, Next.js, and DevOps" />
+    <title>Portfolio</title>
+    <!-- <meta name="description" content="Full Stack Developer specializing in MERN Stack, Next.js, and DevOps" />
     <meta name="author" content="Portfolio Developer" />
 
     <meta property="og:title" content="Portfolio - Full Stack Developer" />
     <meta property="og:description" content="Full Stack Developer specializing in MERN Stack, Next.js, and DevOps" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:type" content="website" /> -->
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
